--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ dj_database_url==0.3.0
 django-cities-light==3.0.2
 django==1.7.1
 psycopg2==2.5.4
-django-rest-framework==3.0.2
+djangorestframework==3.0.2
+django-jenkins
