--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ psycopg2==2.5.4
 djangorestframework==3.0.2
 django-jenkins
 django_pipeline==1.4.2
+django_filter==0.9.1
+rest_framework_ember==1.1.0
+django-widget-tweaks==1.3
