--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 dj_database_url==0.3.0
 django-cities-light==3.0.2
-django==1.7.1
-psycopg2==2.5.4
-djangorestframework==3.0.2
+django-cors-headers==1.0.0
 django-jenkins
-django_pipeline==1.4.2
-django_filter==0.9.1
-rest_framework_ember==1.1.0
 django-widget-tweaks==1.3
+django==1.7.1
+django_filter==0.9.1
+django_pipeline==1.4.2
+djangorestframework==3.0.2
+psycopg2==2.5.4
+rest_framework_ember==1.1.0
