--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ gunicorn==19.1.1
 psycopg2==2.5.4
 rest_framework_ember==1.1.0
 django-debug-toolbar
+djorm-pgarray==1.2
+git+https://github.com/disqus/django-bitfield.git
