--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-cors-headers==1.0.0
 django-debug-toolbar
 django-jenkins
 django-picklefield==0.3.1
+django-tinymce==1.5.3
 django-widget-tweaks==1.3
 django==1.7.1
 django_filter==0.9.1
