--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ djorm-ext-pgjson==0.3
 djorm-pgarray==1.2
 git+https://github.com/disqus/django-bitfield.git
 gunicorn==19.1.1
+mailchimp==2.0.9
 psycopg2==2.5.4
 rest_framework_ember==1.1.0
 stripe==1.20.2
