--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,6 @@ git+https://github.com/disqus/django-bitfield.git
 gunicorn==19.1.1
 mailchimp==2.0.9
 psycopg2==2.5.4
+raven==5.2.0
 rest_framework_ember==1.1.0
 stripe==1.20.2
