--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+celery==3.1.17
 dj-static==0.0.6
 dj_database_url==0.3.0
 django-annoying==0.8.0
@@ -21,5 +22,6 @@ mailchimp==2.0.9
 psycopg2==2.5.4
 pytz==2014.10
 raven==5.2.0
+redis==2.10.3
 rest_framework_ember==1.1.0
 stripe==1.20.2
