--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-constance==1.0.1
 django-cors-headers==1.0.0
 django-debug-toolbar
 django-jenkins
+django-multiselectfield==0.1.3
 django-picklefield==0.3.1
 django-tinymce==1.5.3
 django-widget-tweaks==1.3
